# Echo

./: Dockerfile  README.md  pyproject.toml
echo/discord/: __init__.py  __main__.py  app.py
echo/email/: __init__.py  __main__.py  app.py
echo/shared/: __init__.py  client.py  format.py  sessions.py  stream.py
echo/slack/: __init__.py  __main__.py  app.py
echo/telegram/: __init__.py  __main__.py  app.py
echo/whatsapp/: __init__.py  __main__.py  app.py
tests/: test_client.py  test_email.py  test_format.py  test_sessions.py  test_stream.py  test_telegram.py  test_whatsapp.py
